--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,6 +13,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:id="@+id/list_item_root"
         android:layout_height="wrap_content">
 
 
